# federation-log-analysis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  ai_optimizer.py  analyze_federation_ai.py  analyze_federation_logs.py  analyze_federation_logs_v2.py  analyze_federation_logs_v3.py  analyze_logs_ai.py  analyze_smart.py  analyze_store_reasons.py  claude_desktop_config.example.json  federation_dashboard.py  federation_mcp_server.py  federation_report.html  health_events_analyzer.py  pyproject.toml  pytest.ini  requirements.txt  unzip_logs.py
federation_analyzer/: __init__.py  analyzer.py  events.py  exceptions.py  logging_config.py  patterns.py
federation_analyzer/ml/: __init__.py  anomaly.py  cascades.py  causality.py  forecasting.py  recommendations.py
templates/: dashboard.html
tests/: __init__.py  conftest.py
tests/fixtures/: .gitkeep
tests/integration/: __init__.py  test_analyzer.py
tests/unit/: test_anomaly_detection.py  test_exceptions.py  test_logging.py  test_parsing.py
